services updated; security added; retries added; docker config updated; project structure updated